switch to not use a subclass content, and add additional behaviors (re #88)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,7 +9,7 @@ auto-checkout =
     templer.dexterity
 
 [sources]
-templer.dexterity=git https://github.com/collective/templer.dexterity.git
+templer.dexterity=git https://github.com/inigoconsulting/templer.dexterity.git
 
 [scripts]
 recipe = zc.recipe.egg
@@ -21,9 +21,7 @@ eggs =
     PasteScript
     zest.releaser
     wcc.churchbody
-=======
 parts += omelette
->>>>>>> 7c9eaeea0cbe0d5919eab4dcc05a908c5ec151a8
 
 [test]
 recipe = zc.recipe.testrunner
